--- a/app/src/main/res/layout/activity_kseb.xml
+++ b/app/src/main/res/layout/activity_kseb.xml
@@ -73,7 +73,21 @@
                                 android:layout_height="40dp"
                                 android:layout_marginLeft="20dp"
                                 android:popupBackground="#cccccc"
-                                android:spinnerMode="dialog" />
+                                android:spinnerMode="dialog"
+                                android:visibility="gone"/>
+
+                            <TextView
+                                android:id="@+id/tv_accountno"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:textSize="14sp"
+                                android:paddingLeft="10dp"
+                                android:gravity="center_vertical"
+                                android:hint="Select Account"
+                                android:drawableTint="@color/black"
+                                android:drawableRight="@drawable/ic_arrow_down_white"
+                                android:layout_gravity="center_vertical"
+                                android:textStyle="normal" />
 
                         </LinearLayout>
 
@@ -102,7 +116,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp"
                                 android:layout_marginLeft="20dp"
-                                android:textSize="20sp"
+                                android:textSize="15sp"
                                 android:singleLine="true"
                                 android:focusableInTouchMode="true"
                                 android:imeOptions="actionNext" />
@@ -143,6 +157,7 @@
                                 android:layout_height="40dp"
                                 android:layout_marginLeft="20dp"
                                 android:imeOptions="actionNext"
+                                android:textSize="15sp"
                                 android:singleLine="true"
                                 android:inputType="number"
                                 android:maxLength="10" />
@@ -183,6 +198,7 @@
                                 android:layout_height="40dp"
                                 android:layout_marginLeft="20dp"
                                 android:imeOptions="actionNext"
+                                android:textSize="15sp"
                                 android:singleLine="true"
                                 android:inputType="number"
                                 android:maxLength="16" />
@@ -266,6 +282,7 @@
                                 android:layout_height="40dp"
                                 android:layout_marginLeft="20dp"
                                 android:singleLine="true"
+                                android:textSize="15sp"
                                 android:imeOptions="actionNext" />
 
                             <TextView
