--- a/app/src/main/res/layout/activity_kseb.xml
+++ b/app/src/main/res/layout/activity_kseb.xml
@@ -245,7 +245,7 @@
                                     android:textColor="@color/Black"
                                     android:layout_height="40dp"
                                     android:drawableRight="@drawable/ic_arrow_right"
-                                    android:text="Select"
+                                    android:hint="Select"
                                     android:textSize="15sp" />
 
                             </LinearLayout>
