--- a/app/src/main/res/layout/fragment_message_alert.xml
+++ b/app/src/main/res/layout/fragment_message_alert.xml
@@ -250,7 +250,7 @@
                     </LinearLayout>
                     <TextView
                         android:id="@+id/tv_amount"
-                        android:text="₹ 100"
+                        android:text="₹ "
                         android:textSize="35dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="20dp"
