--- a/app/src/main/res/layout/fragment_list_saved_beneficiary.xml
+++ b/app/src/main/res/layout/fragment_list_saved_beneficiary.xml
@@ -76,13 +76,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center">
+
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="29dp"
                 android:layout_centerInParent="true"
-                android:indeterminateDrawable="@drawable/circular_spinner" >
-            </ProgressBar>
+                android:indeterminateDrawable="@drawable/circular_spinner"></ProgressBar>
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_beneficiary"
