HOME > MONEY TRANSFER > OTHERBANK > NEFT,RTGS,IMPS > FUNDTRANSFER > ADD BENEFICIARY > PAY > OTP > SUCCES SCREEN >  SHARE PROBLEM SOLVED

--- a/app/src/main/res/layout/fragment_message_alert_new.xml
+++ b/app/src/main/res/layout/fragment_message_alert_new.xml
@@ -329,14 +329,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Share"
+                        android:layout_centerInParent="true"
+                        android:gravity="center"
                         android:paddingLeft="20dp"
                         android:paddingRight="20dp"
+                        android:text="Share"
                         android:textColor="@color/white"
                         android:textSize="20sp"
-                        android:gravity="center"
-                        android:textStyle="bold"
-                        android:layout_centerInParent="true"/>
+                        android:textStyle="bold" />
 
                 </RelativeLayout>
 
