--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -52,9 +52,9 @@
                         android:text="@string/Licencedby"/>
 
                     <ImageView
+                        android:id="@+id/img_applogo"
                         android:layout_width="200dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/aappicon"
                         android:layout_gravity="center"/>
 
                 </LinearLayout>
@@ -86,8 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
-                    android:layout_gravity="bottom|center_horizontal"
-                    android:src="@drawable/companylogo"/>
+                    android:layout_gravity="bottom|center_horizontal" />
             </LinearLayout>
 
 
