--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -66,12 +66,11 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/tvTitle"
+                    android:id="@+id/img_applogo"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:scaleType="fitXY"
                     android:layout_gravity="center"
-                    android:background="@drawable/aappicon"
                     android:gravity="center" />
                 <TextView
                     android:id="@+id/txt_app_name"
