--- a/app/src/main/res/layout/activity_pin_login.xml
+++ b/app/src/main/res/layout/activity_pin_login.xml
@@ -107,12 +107,11 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/tvTitle"
+                    android:id="@+id/img_applogo"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:scaleType="fitXY"
                     android:layout_gravity="center"
-                    android:background="@drawable/aappicon"
                     android:gravity="center" />
                 <TextView
                     android:id="@+id/txt_app_name"
@@ -485,15 +484,14 @@
                 android:id="@+id/img_logout"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
                 android:contentDescription="@string/share"
-                android:src="@drawable/ic_registration"
-                />
+                android:src="@drawable/ic_registration" />
             <TextView
                 android:id="@+id/txt_logout"
                 android:layout_width="wrap_content"
