--- a/app/src/main/res/layout/logout_popup.xml
+++ b/app/src/main/res/layout/logout_popup.xml
@@ -40,8 +40,8 @@
                     android:orientation="vertical"
                     >
                     <ImageView
+                        android:id="@+id/img_applogo1"
                         android:layout_width="65dp"
-                        android:background="@drawable/aappicon"
                         android:layout_gravity="center"
                         android:layout_height="65dp"
                         android:layout_marginBottom="20dp"/>
