HOME > MORE HOME > MORE[SIDE MENU] COMAPANY LOGO

--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -232,9 +232,9 @@
 
 
                     <ImageView
+                        android:id="@+id/imCompanylogo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/companylogo"
                         android:backgroundTint="@color/grey" />
                 </RelativeLayout>
             </LinearLayout>
