--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -22,12 +22,11 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/tvTitle"
+                android:id="@+id/img_applogo"
                 android:layout_width="120dp"
                 android:layout_height="130dp"
                 android:scaleType="fitXY"
                 android:layout_gravity="center"
-                android:background="@drawable/aappicon"
                 android:gravity="center" />
             <TextView
                 android:id="@+id/txt_app_name"
