--- a/app/src/main/res/layout/alert_layout.xml
+++ b/app/src/main/res/layout/alert_layout.xml
@@ -40,6 +40,7 @@
                     android:orientation="vertical"
                     >
                     <ImageView
+                        android:id="@+id/img_applogo"
                         android:layout_width="65dp"
                         android:background="@drawable/aappicon"
                         android:layout_gravity="center"
