--- a/app/src/main/res/layout/alert_recharge.xml
+++ b/app/src/main/res/layout/alert_recharge.xml
@@ -40,8 +40,8 @@
                     android:orientation="vertical"
                     >
                     <ImageView
+                        android:id="@+id/img_applogo"
                         android:layout_width="65dp"
-                        android:background="@drawable/aappicon"
                         android:layout_gravity="center"
                         android:layout_height="65dp" />
                     <TextView
