--- a/app/src/main/res/layout/custom_action_bar.xml
+++ b/app/src/main/res/layout/custom_action_bar.xml
@@ -16,8 +16,7 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/activate_user"
             android:paddingTop="5dp"
-            android:layout_weight="5"
-            android:src="@drawable/aappicon"/>
+            android:layout_weight="5" />
         <TextView
             android:id="@+id/custom_action_bar_title"
             android:layout_width="match_parent"
