--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -13,7 +13,6 @@
         android:layout_marginBottom="40dp"
         android:layout_marginTop="40dp"
         android:contentDescription="@string/app_logo"
-        android:src="@drawable/aappicon"
         android:visibility="gone" />
 
     <LinearLayout
@@ -94,8 +93,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/aappicon" />
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -118,12 +116,13 @@
             android:layout_centerHorizontal="true"
             android:text="@string/technology_partner"
             android:textColor="@color/white"/>
+
         <ImageView
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_below="@id/txt_view_technologypartner"
             android:layout_centerHorizontal="true"
-            android:src="@mipmap/technology_partner"/>
+            android:src="@mipmap/technology_partner" />
     </RelativeLayout>
 
 </LinearLayout>
