--- a/app/src/main/res/layout/fragment_barcode.xml
+++ b/app/src/main/res/layout/fragment_barcode.xml
@@ -56,14 +56,14 @@
                                             android:layout_gravity="center"
                                             android:layout_marginTop="2dp">
                                                 <ImageView
+                                                    android:id="@+id/img_applogo"
                                                     android:layout_width="30dp"
                                                     android:layout_height="30dp"
                                                     android:layout_marginLeft="10dp"
                                                     android:layout_gravity="center_horizontal"
                                                     android:gravity="center"
                                                     android:scaleType="fitXY"
-                                                    android:background="@drawable/circle_shape"
-                                                    android:src="@drawable/aappicon"/>
+                                                    android:background="@drawable/circle_shape" />
 
                                                 <TextView
                                                     android:layout_width="342dp"
