--- a/app/src/main/res/layout/fragment_message_alert.xml
+++ b/app/src/main/res/layout/fragment_message_alert.xml
@@ -32,7 +32,8 @@
                     android:background="@drawable/ic_share"
                     android:layout_alignParentRight="true"
                     android:tint="@color/black"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center"
+                    tools:ignore="UseAppTint" />
 
             </RelativeLayout>
 
@@ -182,7 +183,6 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
                         android:layout_marginLeft="50dp"
-                        android:visibility="gone"
                         android:layout_weight="1"
                         android:text=""/>
                     <View
