--- a/app/src/main/res/layout/fragment_message_alert.xml
+++ b/app/src/main/res/layout/fragment_message_alert.xml
@@ -226,6 +226,7 @@
                             android:layout_marginLeft="50dp"
                             android:textColor="@color/black"
                             android:layout_weight="1"
+                            android:visibility="gone"
                             android:text="">
                         </TextView>
                     </LinearLayout>
