--- a/app/src/main/res/layout/activity_splitlist.xml
+++ b/app/src/main/res/layout/activity_splitlist.xml
@@ -12,6 +12,7 @@
         android:layout_height="1dp"
         android:background="@color/FireBrick"/>
     <LinearLayout
+        android:id="@+id/ll_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -25,7 +26,6 @@
             android:visibility="gone"
             android:drawablePadding="5dp"
             android:layout_weight="1.5"
-
             android:textColor="@color/Black"
             android:textSize="15sp"/>
 
@@ -67,4 +67,66 @@
             android:textSize="15sp"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_liability"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_sl_no1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=" : "
+            android:gravity="center"
+            android:visibility="gone"
+            android:drawablePadding="5dp"
+            android:layout_weight="1.5"
+            android:textColor="@color/Black"
+            android:textSize="15sp"/>
+
+        <TextView
+            android:id="@+id/tvkey1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Account Number"
+            android:drawablePadding="5dp"
+            android:paddingLeft="3dp"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:textColor="@color/gray"
+            android:textSize="15sp"/>
+
+        <TextView
+            android:id="@+id/tv_sep1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=" : "
+            android:textStyle="bold"
+            android:drawablePadding="5dp"
+            android:layout_weight="1.8"
+            android:textColor="@color/gray"
+            android:textSize="15sp"/>
+
+
+        <TextView
+            android:id="@+id/tvvalue1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:gravity="right|center_vertical"
+            android:textStyle="bold"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1.2"
+            android:text="456789000987"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="15sp"/>
+
+    </LinearLayout>
+
+
 </LinearLayout>
